Update category style

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -179,7 +179,7 @@ ul, ol {
   li {
     display: inline-block;
 
-    border-right: 2px solid;
+    // border-right: 2px solid;
     padding-right: 5px;
 
     a {
