Update FZ article and hr style

--- a/source/_layouts/fz.html
+++ b/source/_layouts/fz.html
@@ -3,7 +3,7 @@ layout: default_page
 ---
 
 <div>
-<article role="article">
+<article role="article" id='fz'>
   {% if page.title %}
   <section class='category-header'>
     <p>{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</p>
