--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -213,6 +213,30 @@ ul, ol {
   background: #70bbd9;
   padding-top: 40px;
 
+  article {
+    font-size: 0.95em;
+  }
+
+  .cf:before,
+  .cf:after {
+    content: '';
+    display: table;
+  }
+  .cf:after{
+    clear: both;
+  }
+  .cf {  *zoom: 1; /* for IE6 and IE7 */}
+
+  .category-header {
+    padding: 20px 0 40px 0;
+    .title {
+      float: left;
+    }
+    .date {
+      float: right;
+    }
+  }
+
   .envelope {
     position: absolute;
     top: 100px;
