--- a/source/_layouts/fz.html
+++ b/source/_layouts/fz.html
@@ -21,11 +21,9 @@
   <link href="{{ root_url }}/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
   <link href="{{ site.subscribe_rss }}" rel="alternate" title="{{site.title}}" type="application/atom+xml">
   <script src="{{ root_url }}/javascripts/modernizr-2.0.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="{{ root_url }}/javascripts/jquery.min.js"></script>
   <script>!window.jQuery && document.write(unescape('%3Cscript src="./javascripts/lib/jquery.min.js"%3E%3C/script%3E'))</script>
   <script src="{{ root_url }}/javascripts/octopress.js" type="text/javascript"></script>
-  {% include custom/head.html %}
-  {% include google_analytics.html %}
 </head>
 
 <body id='fz' {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
@@ -38,7 +36,7 @@
   <div id="main">
     <div id="content">
       <div>
-        <article role="article">
+        <article role="article" class='artic'>
           {% if page.title %}
           <section class='category-header cf'>
             <p class='title'>{% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}</p>
@@ -51,8 +49,6 @@
       </div>
     </div>
   </div>
-  <footer role="contentinfo">{% include footer.html %}</footer>
-  {% include after_footer.html %}
 </body>
 </html>
 
