Final update FZ

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -213,6 +213,10 @@ ul, ol {
   background: #70bbd9;
   padding-top: 40px;
 
+  blockquote {
+    font-size: 0.8em;
+  }
+
   .artic {
     font-size: 0.95em;
   }
