Change to use theme calm-shallow-sea

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,8 +1,8 @@
-<hgroup>
-  <div id="header-inner">
-    <span class="first"><a href="{{ root_url }}/">{{ site.title }}</a></span>
-    <span><a href="{{ root_url }}/about">about</a></span>
-    <span><a href="http://www.github.com/ifyouseewendy">projects</a></span>
-    <span class="last"><a href="{{ site.subscribe_rss }}" title="subscribe via RSS">rss</a></span>
-  </div>
-</hgroup>
+<div class="aux-container">
+    <a id="nav-toggle" href="#sidr"></a>
+    <a id="search-toggle"></a>
+</div>
+
+<header class="header-container clearfix">
+        <a href="/"><img src="/images/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a>
+</header>
