--- a/sass/_structure.scss
+++ b/sass/_structure.scss
@@ -133,7 +133,8 @@ nav a {
 
     footer.main-footer {
         .interior-footer {
-            @extend .wrapper;
+            width: 1026px; /* 1140px - 10% for margins */
+            margin: 0 auto;
             padding: 20px 0;
         }
     }
