--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,23 +3,23 @@
 <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
   {% include header.html %}
   <div class="main-container">
-    <div class="main wrapper clearfix">
+    <div class="main wrapper clearfix" id="custom-main">
     	{% unless page.sidebar == false %}
     	<aside>
-			{% if site.simple_search %}
-			  	<div class="search-container">
-					<form action="http://google.com/search" method="get">
-						<fieldset role="search">
-							<input type="hidden" name="q" value="site:blog.alexharr.is" />
-							<input class="search-field" type="text" name="q" results="0" placeholder=""/>
-							<input class="submit" type="submit" value=""/>
-						</fieldset>
-					</form>
-				</div>
-			{% endif %}
-		  {% include navigation.html %}
-		</aside>
-		{% endunless %}
+        {% if site.simple_search %}
+          <div class="search-container">
+            <form action="http://google.com/search" method="get">
+              <fieldset role="search">
+                <input type="hidden" name="q" value="site:blog.alexharr.is" />
+                <input class="search-field" type="text" name="q" results="0" placeholder=""/>
+                <input class="submit" type="submit" value=""/>
+              </fieldset>
+            </form>
+          </div>
+        {% endif %}
+        {% include navigation.html %}
+      </aside>
+      {% endunless %}
       {{ content | expand_urls: root_url }}
     </div>
   </div>
