--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -3,7 +3,7 @@
 <body {% if page.body_id %} id="{{ page.body_id }}" {% endif %} {% if page.sidebar == false %} class="no-sidebar" {% endif %} {% if page.sidebar == 'collapse' or site.sidebar == 'collapse' %} class="collapse-sidebar sidebar-footer" {% endif %}>
   {% include header.html %}
   <div class="main-container">
-    <div class="main wrapper clearfix" id="custom-main">
+    <div class="main wrapper clearfix">
     	{% unless page.sidebar == false %}
     	<aside>
         {% if site.simple_search %}
