--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -3,17 +3,16 @@
         <ul>
         	<li>
         		{% if site.blog_index_asides.size %}
-					{% include_array blog_index_asides %}
-				{% else %}
-					{% include_array default_asides %}
-				{% endif %}
+              {% include_array blog_index_asides %}
+            {% else %}
+              {% include_array default_asides %}
+            {% endif %}
         	</li>
         	<li>
         		<ul>
-                    <li>Projects - <a href="http://www.alexharr.is" target="_blank">alexharr.is</a>
-        			<li>Github - <a href="http://www.github.com/alexharris" target="_blank">github.com/alexharris</a></li>
-                    <li>Twitter - <a href="http://www.twitter.com/alexharris6" target="_blank">@alexharris6</a></li>
-                    <li>Email - <a href="mailto:alexharris6@gmail.com" target="_blank">alexharris6 at gmail</a></li>
+                <li>Github - <a href="http://www.github.com/ifyouseewendy" target="_blank">github.com/ifyouseewendy</a></li>
+                <li>Twitter - <a href="http://www.twitter.com/ifyouseewendy" target="_blank">@ifyouseewendy</a></li>
+                <li>Email - <a href="mailto:ifyouseewendy@gmail.com" target="_blank">ifyouseewendy at gmail</a></li>
         		</ul>
         	</li>
         </ul>
