--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -5,6 +5,19 @@
     margin-bottom: 20px;
     font-weight: bold;
     font-size: 1.3em;
+
+    .article-tags {
+      font-weight: normal;
+      font-style: italic;
+      font-size: 0.7em;
+
+      .date {
+        float: right;
+      }
+      a {
+        color: #ababab;
+      }
+    }
   }
 
   /* Markdown */
@@ -15,13 +28,22 @@
   h1 {
      margin-bottom: 18px;
      font-size: 30px;
+     font-weight: bold;
+     color: #da3e10;
   }
   h2 {
      font-size: 24px;
+     font-weight: bold;
+     color: #da3e10;
+
      margin-top: 30px;
      margin-bottom: 15px;
      border-bottom: 1px solid #ccc;
-     padding-bottom: 10px;
+     padding-bottom: 5px;
+
+     a {
+       font-weight: normal;
+     }
   }
   h3 {
      font-size: 18px;
