--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,4 +1,8 @@
 <header>
+  <div class="article-tags">
+      {% include post/categories.html %}
+      {% include post/date.html %}
+  </div>
   {% if index %}
     <h1><a href="{{ root_url }}{{ post.url }}">
       {% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}
