--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -1,3 +1,21 @@
+#index-main {
+  margin-bottom: 100px;
+
+  article {
+    margin-bottom: 10px;
+
+    header {
+      margin-bottom: 0px;
+      h1 {
+        font-size: 1.2em;
+        a {
+          font-weight: normal;
+        }
+      }
+    }
+  }
+}
+
 .main article {
   margin-bottom: 30px;
 
@@ -106,3 +124,8 @@
   }
 }
 
+.main-footer {
+  .interior-footer {
+    text-align: right;
+  }
+}
