--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,27 +1,21 @@
 <header>
-  <div class="article-tags">
-      {% include post/categories.html %}
-      {% include post/date.html %}
-  </div>
   {% if index %}
     <h1><a href="{{ root_url }}{{ post.url }}">
       {% if site.titlecase %}{{ post.title | titlecase }}{% else %}{{ post.title }}{% endif %}
     </a></h1>
   {% else %}
+    <div class="article-tags">
+        {% include post/categories.html %}
+        {% include post/date.html %}
+    </div>
     <h1>
-      {% if site.titlecase %}{{ page.title | titlecase }}{% else %}{{ page.title }}{% endif %}
+      {% if site.titlecase %}{{ page.title }}{% else %}{{ page.title }}{% endif %}
     </h1>
   {% endif %}
 </header>
+
 {% if index %}
   <section>{{ excerpt }}</section>
-  {% capture excerpted %}{{ content | has_excerpt }}{% endcapture %}
-  {% if excerpted == 'true' %}
-  <footer>
-      <div class="article-date">
-        {% include post/date.html %}{% if updated %}{{ updated }}{% else %}{{ time }}{% endif %}</div>
-  </footer>
-  {% endif %}
 {% else %}
   <section>{{ content }}</section>
 {% endif %}
