--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -4,5 +4,8 @@
 </div>
 
 <header class="header-container clearfix">
-        <a href="/"><img src="/images/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a>
+  <!-- <a href="/"><img src="/images/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a> -->
+  <a href='/'>
+    {% img /images/taxi-driver2.png 100 100 wendi %}
+  </a>
 </header>
