Update theme icon search active png

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -87,7 +87,7 @@ nav {
 	border-radius: 0 2px 2px 0;
 	&:hover {
 		background-color: $darkBlue;
-		background: $darkBlue url("/images/icon-search-active.svg") no-repeat center center;
+		background: $darkBlue url("/images/icon-search-active.png") no-repeat center center;
 	}
 }
 
