--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -25,7 +25,7 @@
   margin-bottom: 30px;
 
   header {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     font-weight: bold;
     font-size: 1.3em;
 
@@ -41,6 +41,9 @@
         color: #ababab;
       }
     }
+    h1 {
+     margin-top: 0px;
+    }
   }
 
   /* Markdown */
@@ -49,6 +52,7 @@
      line-height: 36px;
   }
   h1 {
+     margin-top: 30px;
      margin-bottom: 18px;
      font-size: 30px;
      font-weight: bold;
