--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -12,7 +12,8 @@
     header {
       margin-bottom: 0px;
       h1 {
-        font-size: 26px;
+        font-size: 20px;
+        margin-bottom: 0;
         a {
           font-weight: normal;
         }
