--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -141,7 +141,9 @@
 }
 
 table.custom {
-  padding: 0;border-collapse: collapse;
+  padding: 0;
+  border-collapse: collapse;
+  margin-bottom: 30px;
 
   tr {
     border-top: 1px solid #cccccc;
@@ -171,5 +173,3 @@ table.custom {
   }
 }
 
-.highlight table {
-}
