--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -15,7 +15,7 @@
           <div class="search-container">
             <form action="http://google.com/search" method="get">
               <fieldset role="search">
-                <input type="hidden" name="q" value="site:blog.alexharr.is" />
+                <input type="hidden" name="q" value="site:blog.ifyouseewendy.com" />
                 <input class="search-field" type="text" name="q" results="0" placeholder=""/>
                 <input class="submit" type="submit" value=""/>
               </fieldset>
