--- a/source/_includes/head.html
+++ b/source/_includes/head.html
@@ -10,7 +10,7 @@
 
   {% capture description %}{% if page.description %}{{ page.description }}{% else %}{{ content | raw_content }}{% endif %}{% endcapture %}
   <meta name="description" content="{{ description | strip_html | condense_spaces | truncate:150 }}">
-  <meta name="keywords" content="ruby, rails, tech, web"/>
+  <meta name="keywords" content="Ruby, Rails, Tech, Web"/>
   {% if page.keywords %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
 
   <!-- http://t.co/dKP3o1e -->
