--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -15,7 +15,7 @@
         font-size: 20px;
         margin-bottom: 0;
         a {
-          font-weight: normal;
+          // font-weight: normal;
         }
       }
     }
@@ -128,48 +128,64 @@
     width: 100%;
   }
 
+  table.custom {
+    padding: 0;
+    border-collapse: collapse;
+    margin-bottom: 30px;
+
+    tr {
+      border-top: 1px solid #cccccc;
+      background-color: white;
+      margin: 0;
+      padding: 0;
+    }
+    tr:nth-child(2n) {
+      background-color: #f8f8f8;
+    }
+    tr th {
+      font-weight: bold;
+      border: 1px solid #cccccc;
+      margin: 0;
+      padding: 6px 13px;
+    }
+    tr td {
+      border: 1px solid #cccccc;
+      margin: 0;
+      padding: 6px 13px;
+    }
+    tr th :first-child, table tr td :first-child {
+      margin-top: 0;
+    }
+    tr th :last-child, table tr td :last-child {
+      margin-bottom: 0;
+    }
+  }
 
   .comments {
     margin-top: 80px;
+  }
+
+  .category-title {
+    font-size: 25px;
+  }
+
+  #blog-archives {
+    article {
+      width: 90%;
+    }
+    h1 {
+      margin-top: 0px;
+      margin-bottom: 5px;
+      font-size: 20px;
+    }
+    time {
+    }
   }
 }
 
 .main-footer {
   .interior-footer {
     text-align: right;
-  }
-}
-
-table.custom {
-  padding: 0;
-  border-collapse: collapse;
-  margin-bottom: 30px;
-
-  tr {
-    border-top: 1px solid #cccccc;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-  }
-  tr:nth-child(2n) {
-    background-color: #f8f8f8;
-  }
-  tr th {
-    font-weight: bold;
-    border: 1px solid #cccccc;
-    margin: 0;
-    padding: 6px 13px;
-  }
-  tr td {
-    border: 1px solid #cccccc;
-    margin: 0;
-    padding: 6px 13px;
-  }
-  tr th :first-child, table tr td :first-child {
-    margin-top: 0;
-  }
-  tr th :last-child, table tr td :last-child {
-    margin-bottom: 0;
   }
 }
 
