Rem: about page toggle

--- a/source/_layouts/about.html
+++ b/source/_layouts/about.html
@@ -26,8 +26,8 @@
 </head>
 <body>
   <div class="aux-container">
-    <a id="nav-toggle" href="#sidr"></a>
-    <a id="search-toggle"></a>
+    <!-- <a id="nav-toggle" href="#sidr"></a> -->
+    <!-- <a id="search-toggle"></a> -->
   </div>
   <header class="header-container clearfix">
     <a href='/'>{% img /images/taxi-driver2.png 100 100 wendi %}</a>
