Mod: about page image to #

--- a/source/_layouts/about.html
+++ b/source/_layouts/about.html
@@ -28,7 +28,7 @@
   <div class="aux-container">
   </div>
   <header class="header-container clearfix">
-    <a href='http://ifyouseewendy.com'>{% img /images/taxi-driver2.png 100 100 wendi %}</a>
+    <a href='#'>{% img /images/taxi-driver2.png 100 100 wendi %}</a>
   </header>
 
   <div class="main-container">
