Add media query, display auto width image over 960px

--- a/sass/custom/_new_styles.scss
+++ b/sass/custom/_new_styles.scss
@@ -1,3 +1,9 @@
+@media screen and (min-width: 960px) {
+  .main article p img {
+    width: auto;
+  }
+}
+
 .header-container img {
   border-radius: 50%;
   border: 3px solid #b8d6e0;
