--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -6,6 +6,6 @@
 <header class="header-container clearfix">
   <!-- <a href="/"><img src="/images/ah-frame.svg" onerror="this.onerror=null; this.src='ah-frame.png'"></a> -->
   <a href='/'>
-    {% img /images/taxi-driver2.png 100 100 wendi %}
+    {% img /images/portrait-2019.jpg 200 200 wendi %}
   </a>
 </header>
